--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-# h5py==3.11.0 -- this doesn't exist for aarch64 .....
-numpy~=1.26.4
-opencv-python~=4.9.0.82
-ultralytics~=8.2.74
-torch~=2.4.0
-torchvision~=0.19.0
-scikit-image~=0.24.0
-scikit-learn~=1.5.1
+numpy
+opencv-python
+ultralytics
+torch
+torchvision
+torch_geometric
+grpcio
+grpcio-tools
