--- a/Dockerfile.train
+++ b/Dockerfile.train
@@ -1,7 +1,7 @@
 FROM python:3.12-bookworm
 
 WORKDIR /app
-ADD . /app
+COPY . .
 RUN pip3 install -r requirements.txt -r train-requirements.txt
 
 ENTRYPOINT ["python3"]
