--- a/Dockerfile.train
+++ b/Dockerfile.train
@@ -4,5 +4,4 @@ WORKDIR /app
 COPY . .
 RUN pip3 install -r requirements.txt -r train-requirements.txt
 
-ENTRYPOINT ["python3"]
-CMD ["train.py"]
+ENTRYPOINT ["./train.sh"]
